fixed screen sliding on mobile and edited my data

--- a/src/components/note/note.scss
+++ b/src/components/note/note.scss
@@ -50,10 +50,10 @@
           padding: 5px 10px;
           border-radius: 5px;
           top: -10px;
-          left: -14px;
+          left: 50%;
           background-color: #fff;
           transition: 0.3s;
-          transform: scale(0);
+          transform: translate(-50%) scale(0);
           opacity: 0;
         }
         &:hover {
@@ -62,7 +62,7 @@
           &::after {
             content: "Copy";
             top: -30px;
-            transform: scale(1);
+            transform: translate(-50%) scale(1);
             color: #000;
             opacity: 1;
           }
@@ -73,6 +73,30 @@
       margin-top: 20px;
       color: #000;
       border: solid 1px rgba(0, 0, 0, 0.438);
+    }
+    .buttons {
+      margin-top: 20px;
+      width: 100%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      .resume-button {
+        width: 160px;
+        background-color: transparent;
+        text-decoration: none;
+        color: #333;
+        border: 2px solid #333;
+        border-radius: 25px;
+        font-family: cursive, Helvetica, sans-serif;
+        font-weight: 600;
+        font-size: 15px;
+        text-align: center;
+        padding: 7px 15px;
+        cursor: pointer;
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.507);
+        }
+      }
     }
     .note-links {
       position: absolute;
@@ -113,6 +137,11 @@ p::selection {
           }
           p {
             font-size: 1vw;
+          }
+        }
+        .buttons {
+          .resume-button {
+            font-size: 0.5vw;
           }
         }
         .note-links {
